Changed size of toggle slider in 'About' and adjusted size of iframe in 'Resume'.

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -39,3 +39,10 @@
         width: 100%;
     };
 }
+
+/* For Screens Under 950px */
+@media (max-width: 950px) {
+    .resume {
+        width: 100%;
+    };
+}
