Changed video sizing so there's not so much space on bottom and top.

--- a/src/styles/Capstone.css
+++ b/src/styles/Capstone.css
@@ -11,6 +11,7 @@
 /* Video Of Presentation */
 .presentation {
     border-radius: 0.5rem;
+    max-width: 100%;
 }
 
 /* For Screens Over 2200px */
